--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -26,6 +20,23 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.App-form {
+  height: 50px;
+  width: 400px;
+  margin-top: 5px;
+  border-radius: 10px;
+  font-size: 25px;
+}
+
+.App-button {
+  height: 50px;
+  width: 200px;
+  border-radius: 10px;
+  background-color: turquoise;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 @keyframes App-logo-spin {
