--- a/src/assets/css/Login.css
+++ b/src/assets/css/Login.css
@@ -8,3 +8,53 @@
         max-width: 320px;
     }
 }
+
+.Login {
+    text-align: center;
+}
+
+.Login-logo {
+    height: 40vmin;
+    pointer-events: none;
+}
+
+.Login-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+}
+
+.Login-link {
+    color: #61dafb;
+}
+
+.Login-form {
+    height: 50px;
+    width: 400px;
+    margin-top: 5px;
+    border-radius: 10px;
+    font-size: 25px;
+}
+
+.Login-button {
+    height: 50px;
+    width: 200px;
+    border-radius: 10px;
+    background-color: turquoise;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+@keyframes Login-logo-spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
