--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,5 +1,9 @@
 .Home-header {
     background-color: #282c34;
+}
+
+.Home-body {
+    background-color: #282c34;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
