--- a/src/assets/css/Login.css
+++ b/src/assets/css/Login.css
@@ -20,6 +20,10 @@
 
 .Login-header {
     background-color: #282c34;
+}
+
+.Login-body {
+    background-color: #282c34;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
